Wed Aug 16 17:42:02 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Numeric_Limits.h:

          Explicitly #undef min and max before including <limits> in the
          Mingw case to address global namespace pollution induced
          conflicts.  The previous attempt to address this problem where
          the Windows-specific NOMINMAX preprocessor symbol was defined in
          this header didn't work since the min and max macros were
          already defined beforehand.  In order for NOMINMAX to work as
          expected, it would be have to be defined before any Windows
          headers are included, or more preferrably on the
          preprocessor/compiler command line.  Unfortunately, that would
          probably break some applications.

Wed Aug 16 14:51:58 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * docs/svn/svn-prefs.reg
        * docs/svn/config
        
          Updated to correct keywords values, and add use-commit-times
          as a default option.

Wed Aug 16 10:19:41 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Obstack_T.{cpp,inl}:
          Moved grow_fast and freeze methods from inl to cpp file,
          should fix the link problems with the RHAS IPv6 build

Wed Aug 16 09:50:41 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Misc/Misc.mpc:
        * examples/Misc/test_timestamp.cpp:
          Simple small test for ACE::timestamp()

Wed Aug 16 08:37:41 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/build_lib.bor:
        * include/makeinclude/clean.bor:
        * include/makeinclude/compiler.bor:
          Removed support for the CBuilderX preview compiler, it has never
          become more then preview and we don't test with it anymore

        * include/makeinclude/recurse.bor:
          Removed from the repo, seems not to be used anymore
